--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "mammoth": "^1.11.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.5",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.2.2",
+    "pdfkit": "^0.17.2",
     "supabase": "^2.12.1"
   }
 }
